// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documentation menu should feature a link to news when on saas 1`] = `
[
  <a
    aria-disabled={false}
    className="pf-c-dropdown__menu-item"
    data-ouia-component-id="OUIA-Generated-DropdownItem-4"
    data-ouia-component-type="PF4/DropdownItem"
    data-ouia-safe={true}
    href="//access.redhat.com/products/red-hat-3scale"
    role="menuitem"
    tabIndex={-1}
    target="_blank"
  >
    <Icon
      className="header-context-selector__item-icon"
      isInline={true}
    >
      <span
        className="pf-c-icon pf-m-inline header-context-selector__item-icon"
      >
        <span
          className="pf-c-icon__content"
        >
          <ExternalLinkAltIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
                transform=""
              />
            </svg>
          </ExternalLinkAltIcon>
        </span>
      </span>
    </Icon>
    Customer Portal
  </a>,
  <a
    aria-disabled={false}
    className="pf-c-dropdown__menu-item"
    data-ouia-component-id="OUIA-Generated-DropdownItem-5"
    data-ouia-component-type="PF4/DropdownItem"
    data-ouia-safe={true}
    href=""
    role="menuitem"
    tabIndex={-1}
  >
    <Icon
      className="header-context-selector__item-icon"
      isInline={true}
    >
      <span
        className="pf-c-icon pf-m-inline header-context-selector__item-icon"
      >
        <span
          className="pf-c-icon__content"
        >
          <PuzzlePieceIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 576 512"
              width="1em"
            >
              <path
                d="M519.442 288.651c-41.519 0-59.5 31.593-82.058 31.593C377.409 320.244 432 144 432 144s-196.288 80-196.288-3.297c0-35.827 36.288-46.25 36.288-85.985C272 19.216 243.885 0 210.539 0c-34.654 0-66.366 18.891-66.366 56.346 0 41.364 31.711 59.277 31.711 81.75C175.885 207.719 0 166.758 0 166.758v333.237s178.635 41.047 178.635-28.662c0-22.473-40-40.107-40-81.471 0-37.456 29.25-56.346 63.577-56.346 33.673 0 61.788 19.216 61.788 54.717 0 39.735-36.288 50.158-36.288 85.985 0 60.803 129.675 25.73 181.23 25.73 0 0-34.725-120.101 25.827-120.101 35.962 0 46.423 36.152 86.308 36.152C556.712 416 576 387.99 576 354.443c0-34.199-18.962-65.792-56.558-65.792z"
                transform=""
              />
            </svg>
          </PuzzlePieceIcon>
        </span>
      </span>
    </Icon>
    3scale API Docs
  </a>,
  <a
    aria-disabled={false}
    className="pf-c-dropdown__menu-item"
    data-ouia-component-id="OUIA-Generated-DropdownItem-6"
    data-ouia-component-type="PF4/DropdownItem"
    data-ouia-safe={true}
    href=""
    role="menuitem"
    tabIndex={-1}
  >
    <Icon
      className="header-context-selector__item-icon"
      isInline={true}
    >
      <span
        className="pf-c-icon pf-m-inline header-context-selector__item-icon"
      >
        <span
          className="pf-c-icon__content"
        >
          <CodeIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 640 512"
              width="1em"
            >
              <path
                d="M278.9 511.5l-61-17.7c-6.4-1.8-10-8.5-8.2-14.9L346.2 8.7c1.8-6.4 8.5-10 14.9-8.2l61 17.7c6.4 1.8 10 8.5 8.2 14.9L293.8 503.3c-1.9 6.4-8.5 10.1-14.9 8.2zm-114-112.2l43.5-46.4c4.6-4.9 4.3-12.7-.8-17.2L117 256l90.6-79.7c5.1-4.5 5.5-12.3.8-17.2l-43.5-46.4c-4.5-4.8-12.1-5.1-17-.5L3.8 247.2c-5.1 4.7-5.1 12.8 0 17.5l144.1 135.1c4.9 4.6 12.5 4.4 17-.5zm327.2.6l144.1-135.1c5.1-4.7 5.1-12.8 0-17.5L492.1 112.1c-4.8-4.5-12.4-4.3-17 .5L431.6 159c-4.6 4.9-4.3 12.7.8 17.2L523 256l-90.6 79.7c-5.1 4.5-5.5 12.3-.8 17.2l43.5 46.4c4.5 4.9 12.1 5.1 17 .6z"
                transform=""
              />
            </svg>
          </CodeIcon>
        </span>
      </span>
    </Icon>
    Liquid Reference
  </a>,
  <a
    aria-disabled={false}
    className="pf-c-dropdown__menu-item"
    data-ouia-component-id="OUIA-Generated-DropdownItem-7"
    data-ouia-component-type="PF4/DropdownItem"
    data-ouia-safe={true}
    href="//access.redhat.com/articles/3107441#newfeaturesenhancements"
    role="menuitem"
    tabIndex={-1}
    target="_blank"
  >
    <Icon
      className="header-context-selector__item-icon"
      isInline={true}
    >
      <span
        className="pf-c-icon pf-m-inline header-context-selector__item-icon"
      >
        <span
          className="pf-c-icon__content"
        >
          <LeafIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 576 512"
              width="1em"
            >
              <path
                d="M546.2 9.7c-5.6-12.5-21.6-13-28.3-1.2C486.9 62.4 431.4 96 368 96h-80C182 96 96 182 96 288c0 7 .8 13.7 1.5 20.5C161.3 262.8 253.4 224 384 224c8.8 0 16 7.2 16 16s-7.2 16-16 16C132.6 256 26 410.1 2.4 468c-6.6 16.3 1.2 34.9 17.5 41.6 16.4 6.8 35-1.1 41.8-17.3 1.5-3.6 20.9-47.9 71.9-90.6 32.4 43.9 94 85.8 174.9 77.2C465.5 467.5 576 326.7 576 154.3c0-50.2-10.8-102.2-29.8-144.6z"
                transform=""
              />
            </svg>
          </LeafIcon>
        </span>
      </span>
    </Icon>
    What's new?
  </a>,
]
`;

exports[`Documentation menu should feature a link to quickstarts when enabled 1`] = `
[
  <a
    aria-disabled={false}
    className="pf-c-dropdown__menu-item"
    data-ouia-component-id="OUIA-Generated-DropdownItem-8"
    data-ouia-component-type="PF4/DropdownItem"
    data-ouia-safe={true}
    href="//access.redhat.com/products/red-hat-3scale"
    role="menuitem"
    tabIndex={-1}
    target="_blank"
  >
    <Icon
      className="header-context-selector__item-icon"
      isInline={true}
    >
      <span
        className="pf-c-icon pf-m-inline header-context-selector__item-icon"
      >
        <span
          className="pf-c-icon__content"
        >
          <ExternalLinkAltIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
                transform=""
              />
            </svg>
          </ExternalLinkAltIcon>
        </span>
      </span>
    </Icon>
    Customer Portal
  </a>,
  <a
    aria-disabled={false}
    className="pf-c-dropdown__menu-item"
    data-ouia-component-id="OUIA-Generated-DropdownItem-9"
    data-ouia-component-type="PF4/DropdownItem"
    data-ouia-safe={true}
    href=""
    role="menuitem"
    tabIndex={-1}
  >
    <Icon
      className="header-context-selector__item-icon"
      isInline={true}
    >
      <span
        className="pf-c-icon pf-m-inline header-context-selector__item-icon"
      >
        <span
          className="pf-c-icon__content"
        >
          <PuzzlePieceIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 576 512"
              width="1em"
            >
              <path
                d="M519.442 288.651c-41.519 0-59.5 31.593-82.058 31.593C377.409 320.244 432 144 432 144s-196.288 80-196.288-3.297c0-35.827 36.288-46.25 36.288-85.985C272 19.216 243.885 0 210.539 0c-34.654 0-66.366 18.891-66.366 56.346 0 41.364 31.711 59.277 31.711 81.75C175.885 207.719 0 166.758 0 166.758v333.237s178.635 41.047 178.635-28.662c0-22.473-40-40.107-40-81.471 0-37.456 29.25-56.346 63.577-56.346 33.673 0 61.788 19.216 61.788 54.717 0 39.735-36.288 50.158-36.288 85.985 0 60.803 129.675 25.73 181.23 25.73 0 0-34.725-120.101 25.827-120.101 35.962 0 46.423 36.152 86.308 36.152C556.712 416 576 387.99 576 354.443c0-34.199-18.962-65.792-56.558-65.792z"
                transform=""
              />
            </svg>
          </PuzzlePieceIcon>
        </span>
      </span>
    </Icon>
    3scale API Docs
  </a>,
  <a
    aria-disabled={false}
    className="pf-c-dropdown__menu-item"
    data-ouia-component-id="OUIA-Generated-DropdownItem-10"
    data-ouia-component-type="PF4/DropdownItem"
    data-ouia-safe={true}
    href=""
    role="menuitem"
    tabIndex={-1}
  >
    <Icon
      className="header-context-selector__item-icon"
      isInline={true}
    >
      <span
        className="pf-c-icon pf-m-inline header-context-selector__item-icon"
      >
        <span
          className="pf-c-icon__content"
        >
          <CodeIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 640 512"
              width="1em"
            >
              <path
                d="M278.9 511.5l-61-17.7c-6.4-1.8-10-8.5-8.2-14.9L346.2 8.7c1.8-6.4 8.5-10 14.9-8.2l61 17.7c6.4 1.8 10 8.5 8.2 14.9L293.8 503.3c-1.9 6.4-8.5 10.1-14.9 8.2zm-114-112.2l43.5-46.4c4.6-4.9 4.3-12.7-.8-17.2L117 256l90.6-79.7c5.1-4.5 5.5-12.3.8-17.2l-43.5-46.4c-4.5-4.8-12.1-5.1-17-.5L3.8 247.2c-5.1 4.7-5.1 12.8 0 17.5l144.1 135.1c4.9 4.6 12.5 4.4 17-.5zm327.2.6l144.1-135.1c5.1-4.7 5.1-12.8 0-17.5L492.1 112.1c-4.8-4.5-12.4-4.3-17 .5L431.6 159c-4.6 4.9-4.3 12.7.8 17.2L523 256l-90.6 79.7c-5.1 4.5-5.5 12.3-.8 17.2l43.5 46.4c4.5 4.9 12.1 5.1 17 .6z"
                transform=""
              />
            </svg>
          </CodeIcon>
        </span>
      </span>
    </Icon>
    Liquid Reference
  </a>,
  <a
    aria-disabled={false}
    className="pf-c-dropdown__menu-item"
    data-ouia-component-id="OUIA-Generated-DropdownItem-11"
    data-ouia-component-type="PF4/DropdownItem"
    data-ouia-safe={true}
    href="/quickstarts"
    role="menuitem"
    tabIndex={-1}
  >
    <Icon
      className="header-context-selector__item-icon"
      isInline={true}
    >
      <span
        className="pf-c-icon pf-m-inline header-context-selector__item-icon"
      >
        <span
          className="pf-c-icon__content"
        >
          <BookIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 448 512"
              width="1em"
            >
              <path
                d="M448 360V24c0-13.3-10.7-24-24-24H96C43 0 0 43 0 96v320c0 53 43 96 96 96h328c13.3 0 24-10.7 24-24v-16c0-7.5-3.5-14.3-8.9-18.7-4.2-15.4-4.2-59.3 0-74.7 5.4-4.3 8.9-11.1 8.9-18.6zM128 134c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm0 64c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm253.4 250H96c-17.7 0-32-14.3-32-32 0-17.6 14.4-32 32-32h285.4c-1.9 17.1-1.9 46.9 0 64z"
                transform=""
              />
            </svg>
          </BookIcon>
        </span>
      </span>
    </Icon>
    Quick starts
  </a>,
]
`;

exports[`Documentation menu should feature all default items 1`] = `
[
  <a
    aria-disabled={false}
    className="pf-c-dropdown__menu-item"
    data-ouia-component-id="OUIA-Generated-DropdownItem-1"
    data-ouia-component-type="PF4/DropdownItem"
    data-ouia-safe={true}
    href="//access.redhat.com/products/red-hat-3scale"
    role="menuitem"
    tabIndex={-1}
    target="_blank"
  >
    <Icon
      className="header-context-selector__item-icon"
      isInline={true}
    >
      <span
        className="pf-c-icon pf-m-inline header-context-selector__item-icon"
      >
        <span
          className="pf-c-icon__content"
        >
          <ExternalLinkAltIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
                transform=""
              />
            </svg>
          </ExternalLinkAltIcon>
        </span>
      </span>
    </Icon>
    Customer Portal
  </a>,
  <a
    aria-disabled={false}
    className="pf-c-dropdown__menu-item"
    data-ouia-component-id="OUIA-Generated-DropdownItem-2"
    data-ouia-component-type="PF4/DropdownItem"
    data-ouia-safe={true}
    href=""
    role="menuitem"
    tabIndex={-1}
  >
    <Icon
      className="header-context-selector__item-icon"
      isInline={true}
    >
      <span
        className="pf-c-icon pf-m-inline header-context-selector__item-icon"
      >
        <span
          className="pf-c-icon__content"
        >
          <PuzzlePieceIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 576 512"
              width="1em"
            >
              <path
                d="M519.442 288.651c-41.519 0-59.5 31.593-82.058 31.593C377.409 320.244 432 144 432 144s-196.288 80-196.288-3.297c0-35.827 36.288-46.25 36.288-85.985C272 19.216 243.885 0 210.539 0c-34.654 0-66.366 18.891-66.366 56.346 0 41.364 31.711 59.277 31.711 81.75C175.885 207.719 0 166.758 0 166.758v333.237s178.635 41.047 178.635-28.662c0-22.473-40-40.107-40-81.471 0-37.456 29.25-56.346 63.577-56.346 33.673 0 61.788 19.216 61.788 54.717 0 39.735-36.288 50.158-36.288 85.985 0 60.803 129.675 25.73 181.23 25.73 0 0-34.725-120.101 25.827-120.101 35.962 0 46.423 36.152 86.308 36.152C556.712 416 576 387.99 576 354.443c0-34.199-18.962-65.792-56.558-65.792z"
                transform=""
              />
            </svg>
          </PuzzlePieceIcon>
        </span>
      </span>
    </Icon>
    3scale API Docs
  </a>,
  <a
    aria-disabled={false}
    className="pf-c-dropdown__menu-item"
    data-ouia-component-id="OUIA-Generated-DropdownItem-3"
    data-ouia-component-type="PF4/DropdownItem"
    data-ouia-safe={true}
    href=""
    role="menuitem"
    tabIndex={-1}
  >
    <Icon
      className="header-context-selector__item-icon"
      isInline={true}
    >
      <span
        className="pf-c-icon pf-m-inline header-context-selector__item-icon"
      >
        <span
          className="pf-c-icon__content"
        >
          <CodeIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 640 512"
              width="1em"
            >
              <path
                d="M278.9 511.5l-61-17.7c-6.4-1.8-10-8.5-8.2-14.9L346.2 8.7c1.8-6.4 8.5-10 14.9-8.2l61 17.7c6.4 1.8 10 8.5 8.2 14.9L293.8 503.3c-1.9 6.4-8.5 10.1-14.9 8.2zm-114-112.2l43.5-46.4c4.6-4.9 4.3-12.7-.8-17.2L117 256l90.6-79.7c5.1-4.5 5.5-12.3.8-17.2l-43.5-46.4c-4.5-4.8-12.1-5.1-17-.5L3.8 247.2c-5.1 4.7-5.1 12.8 0 17.5l144.1 135.1c4.9 4.6 12.5 4.4 17-.5zm327.2.6l144.1-135.1c5.1-4.7 5.1-12.8 0-17.5L492.1 112.1c-4.8-4.5-12.4-4.3-17 .5L431.6 159c-4.6 4.9-4.3 12.7.8 17.2L523 256l-90.6 79.7c-5.1 4.5-5.5 12.3-.8 17.2l43.5 46.4c4.5 4.9 12.1 5.1 17 .6z"
                transform=""
              />
            </svg>
          </CodeIcon>
        </span>
      </span>
    </Icon>
    Liquid Reference
  </a>,
]
`;

exports[`Documentation menu should feature all links when enabled 1`] = `
[
  <a
    aria-disabled={false}
    className="pf-c-dropdown__menu-item"
    data-ouia-component-id="OUIA-Generated-DropdownItem-12"
    data-ouia-component-type="PF4/DropdownItem"
    data-ouia-safe={true}
    href="//access.redhat.com/products/red-hat-3scale"
    role="menuitem"
    tabIndex={-1}
    target="_blank"
  >
    <Icon
      className="header-context-selector__item-icon"
      isInline={true}
    >
      <span
        className="pf-c-icon pf-m-inline header-context-selector__item-icon"
      >
        <span
          className="pf-c-icon__content"
        >
          <ExternalLinkAltIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
                transform=""
              />
            </svg>
          </ExternalLinkAltIcon>
        </span>
      </span>
    </Icon>
    Customer Portal
  </a>,
  <a
    aria-disabled={false}
    className="pf-c-dropdown__menu-item"
    data-ouia-component-id="OUIA-Generated-DropdownItem-13"
    data-ouia-component-type="PF4/DropdownItem"
    data-ouia-safe={true}
    href=""
    role="menuitem"
    tabIndex={-1}
  >
    <Icon
      className="header-context-selector__item-icon"
      isInline={true}
    >
      <span
        className="pf-c-icon pf-m-inline header-context-selector__item-icon"
      >
        <span
          className="pf-c-icon__content"
        >
          <PuzzlePieceIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 576 512"
              width="1em"
            >
              <path
                d="M519.442 288.651c-41.519 0-59.5 31.593-82.058 31.593C377.409 320.244 432 144 432 144s-196.288 80-196.288-3.297c0-35.827 36.288-46.25 36.288-85.985C272 19.216 243.885 0 210.539 0c-34.654 0-66.366 18.891-66.366 56.346 0 41.364 31.711 59.277 31.711 81.75C175.885 207.719 0 166.758 0 166.758v333.237s178.635 41.047 178.635-28.662c0-22.473-40-40.107-40-81.471 0-37.456 29.25-56.346 63.577-56.346 33.673 0 61.788 19.216 61.788 54.717 0 39.735-36.288 50.158-36.288 85.985 0 60.803 129.675 25.73 181.23 25.73 0 0-34.725-120.101 25.827-120.101 35.962 0 46.423 36.152 86.308 36.152C556.712 416 576 387.99 576 354.443c0-34.199-18.962-65.792-56.558-65.792z"
                transform=""
              />
            </svg>
          </PuzzlePieceIcon>
        </span>
      </span>
    </Icon>
    3scale API Docs
  </a>,
  <a
    aria-disabled={false}
    className="pf-c-dropdown__menu-item"
    data-ouia-component-id="OUIA-Generated-DropdownItem-14"
    data-ouia-component-type="PF4/DropdownItem"
    data-ouia-safe={true}
    href=""
    role="menuitem"
    tabIndex={-1}
  >
    <Icon
      className="header-context-selector__item-icon"
      isInline={true}
    >
      <span
        className="pf-c-icon pf-m-inline header-context-selector__item-icon"
      >
        <span
          className="pf-c-icon__content"
        >
          <CodeIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 640 512"
              width="1em"
            >
              <path
                d="M278.9 511.5l-61-17.7c-6.4-1.8-10-8.5-8.2-14.9L346.2 8.7c1.8-6.4 8.5-10 14.9-8.2l61 17.7c6.4 1.8 10 8.5 8.2 14.9L293.8 503.3c-1.9 6.4-8.5 10.1-14.9 8.2zm-114-112.2l43.5-46.4c4.6-4.9 4.3-12.7-.8-17.2L117 256l90.6-79.7c5.1-4.5 5.5-12.3.8-17.2l-43.5-46.4c-4.5-4.8-12.1-5.1-17-.5L3.8 247.2c-5.1 4.7-5.1 12.8 0 17.5l144.1 135.1c4.9 4.6 12.5 4.4 17-.5zm327.2.6l144.1-135.1c5.1-4.7 5.1-12.8 0-17.5L492.1 112.1c-4.8-4.5-12.4-4.3-17 .5L431.6 159c-4.6 4.9-4.3 12.7.8 17.2L523 256l-90.6 79.7c-5.1 4.5-5.5 12.3-.8 17.2l43.5 46.4c4.5 4.9 12.1 5.1 17 .6z"
                transform=""
              />
            </svg>
          </CodeIcon>
        </span>
      </span>
    </Icon>
    Liquid Reference
  </a>,
  <a
    aria-disabled={false}
    className="pf-c-dropdown__menu-item"
    data-ouia-component-id="OUIA-Generated-DropdownItem-15"
    data-ouia-component-type="PF4/DropdownItem"
    data-ouia-safe={true}
    href="//access.redhat.com/articles/3107441#newfeaturesenhancements"
    role="menuitem"
    tabIndex={-1}
    target="_blank"
  >
    <Icon
      className="header-context-selector__item-icon"
      isInline={true}
    >
      <span
        className="pf-c-icon pf-m-inline header-context-selector__item-icon"
      >
        <span
          className="pf-c-icon__content"
        >
          <LeafIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 576 512"
              width="1em"
            >
              <path
                d="M546.2 9.7c-5.6-12.5-21.6-13-28.3-1.2C486.9 62.4 431.4 96 368 96h-80C182 96 96 182 96 288c0 7 .8 13.7 1.5 20.5C161.3 262.8 253.4 224 384 224c8.8 0 16 7.2 16 16s-7.2 16-16 16C132.6 256 26 410.1 2.4 468c-6.6 16.3 1.2 34.9 17.5 41.6 16.4 6.8 35-1.1 41.8-17.3 1.5-3.6 20.9-47.9 71.9-90.6 32.4 43.9 94 85.8 174.9 77.2C465.5 467.5 576 326.7 576 154.3c0-50.2-10.8-102.2-29.8-144.6z"
                transform=""
              />
            </svg>
          </LeafIcon>
        </span>
      </span>
    </Icon>
    What's new?
  </a>,
  <a
    aria-disabled={false}
    className="pf-c-dropdown__menu-item"
    data-ouia-component-id="OUIA-Generated-DropdownItem-16"
    data-ouia-component-type="PF4/DropdownItem"
    data-ouia-safe={true}
    href="/quickstarts"
    role="menuitem"
    tabIndex={-1}
  >
    <Icon
      className="header-context-selector__item-icon"
      isInline={true}
    >
      <span
        className="pf-c-icon pf-m-inline header-context-selector__item-icon"
      >
        <span
          className="pf-c-icon__content"
        >
          <BookIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 448 512"
              width="1em"
            >
              <path
                d="M448 360V24c0-13.3-10.7-24-24-24H96C43 0 0 43 0 96v320c0 53 43 96 96 96h328c13.3 0 24-10.7 24-24v-16c0-7.5-3.5-14.3-8.9-18.7-4.2-15.4-4.2-59.3 0-74.7 5.4-4.3 8.9-11.1 8.9-18.6zM128 134c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm0 64c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm253.4 250H96c-17.7 0-32-14.3-32-32 0-17.6 14.4-32 32-32h285.4c-1.9 17.1-1.9 46.9 0 64z"
                transform=""
              />
            </svg>
          </BookIcon>
        </span>
      </span>
    </Icon>
    Quick starts
  </a>,
]
`;

exports[`Session menu should describe who is currently signed in 1`] = `
[
  <a
    aria-disabled={true}
    className="pf-c-dropdown__session-info pf-m-disabled pf-c-dropdown__menu-item"
    data-ouia-component-id="OUIA-Generated-DropdownItem-17"
    data-ouia-component-type="PF4/DropdownItem"
    data-ouia-safe={true}
    onClick={[Function]}
    onKeyPress={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <span>
      Signed in to Provider as admin
    </span>
  </a>,
  <a
    aria-disabled={false}
    className="pf-c-dropdown__menu-item"
    data-ouia-component-id="OUIA-Generated-DropdownItem-18"
    data-ouia-component-type="PF4/DropdownItem"
    data-ouia-safe={true}
    href=""
    role="menuitem"
    tabIndex={-1}
  >
    <Icon
      className="header-context-selector__item-icon"
      isInline={true}
    >
      <span
        className="pf-c-icon pf-m-inline header-context-selector__item-icon"
      >
        <span
          className="pf-c-icon__content"
        >
          <TimesIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 352 512"
              width="1em"
            >
              <path
                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                transform=""
              />
            </svg>
          </TimesIcon>
        </span>
      </span>
    </Icon>
    Sign Out
  </a>,
]
`;

exports[`Session menu should describe who is currently signed in 2`] = `
[
  <a
    aria-disabled={true}
    className="pf-c-dropdown__session-info pf-m-disabled pf-c-dropdown__menu-item"
    data-ouia-component-id="OUIA-Generated-DropdownItem-17"
    data-ouia-component-type="PF4/DropdownItem"
    data-ouia-safe={true}
    onClick={[Function]}
    onKeyPress={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <span>
      <BoltIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
        title={null}
      >
        <svg
          aria-hidden={true}
          aria-labelledby={null}
          fill="currentColor"
          height="1em"
          role="img"
          style={
            {
              "verticalAlign": "-0.125em",
            }
          }
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M296 160H180.6l42.6-129.8C227.2 15 215.7 0 200 0H56C44 0 33.8 8.9 32.2 20.8l-32 240C-1.7 275.2 9.5 288 24 288h118.7L96.6 482.5c-3.6 15.2 8 29.5 23.3 29.5 8.4 0 16.4-4.4 20.8-12l176-304c9.3-15.9-2.2-36-20.7-36z"
            transform=""
          />
        </svg>
      </BoltIcon>
       Impersonating a virtual admin user from Provider as admin
    </span>
  </a>,
  <a
    aria-disabled={false}
    className="pf-c-dropdown__menu-item"
    data-ouia-component-id="OUIA-Generated-DropdownItem-18"
    data-ouia-component-type="PF4/DropdownItem"
    data-ouia-safe={true}
    href=""
    role="menuitem"
    tabIndex={-1}
  >
    <Icon
      className="header-context-selector__item-icon"
      isInline={true}
    >
      <span
        className="pf-c-icon pf-m-inline header-context-selector__item-icon"
      >
        <span
          className="pf-c-icon__content"
        >
          <TimesIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 352 512"
              width="1em"
            >
              <path
                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                transform=""
              />
            </svg>
          </TimesIcon>
        </span>
      </span>
    </Icon>
    Sign Out
  </a>,
]
`;
